--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1,7 +1,3 @@
-*{
-    margin: 0;
-    padding: 0;
-}
 
 body {
     background-color: #212529 ;
@@ -76,8 +72,8 @@ h1.name{
     color:  rgb(255, 212, 70);
 }
 
-td {
-    padding: 15px 30px;
+.td2 {
+    
     color: white;
 }
 
